--- a/Apply3.css
+++ b/Apply3.css
@@ -31,23 +31,23 @@ h3 {
     text-align: center;
     font-style: Zen Kaku Gothic New;
     font-size: 20px;
-    margin-top: 100%;
+    margin-top: 150%;
     font-weight: 53;
 }
 
 .centered-text {
     position: absolute;
-    top: 70%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
 .centered-text1 {
     position: absolute;
-    /* top: 50%;
-    left: 50%; */
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
-    margin-top: 100%;
+    margin-top: 23%;
 }
 
 p{
@@ -60,4 +60,23 @@ p{
     font-style: Noto Sans;
     font-size: 13px;
     text-align: center;
+}
+
+img {
+    width: 150px;
+    height: 50px;
+    position: absolute;
+    bottom: 0;
+    right: 2%;
+    top: 1480%;
+}
+
+h6 {
+    font-style: Noto Sans;
+    font-size: 15px;
+    font-weight: 53;
+    position: absolute;
+    bottom: 7%;
+    right: 5.5%;
+    top: 1430%;
 }
