--- a/Apply2.css
+++ b/Apply2.css
@@ -87,6 +87,23 @@ h6 {
 
 }
 
+.image-number {
+    width: 350px;
+    height: 180px;
+    margin-left: 630px;
+    margin-top: -140px;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+}
+
+.image-number img{
+    width: 100%;
+    height: auto;
+    display: block;
+
+}
+
 .image-support {
     width: 350px;
     height: 0px;
@@ -137,8 +154,8 @@ h6 {
 
 .image-home {
     width: 150px;
-    margin-left: 1330px;
-    margin-top: 140px;
+    margin-left: 1320px;
+    margin-top: 90px;
 }
 
 .image-home img {
@@ -157,4 +174,58 @@ h6 {
     width: 100%;
     height: auto;
     display: block;
+}
+
+.name {
+    margin-left: -280px;
+    margin-top:-600px;
+    font-weight: bold;
+}
+
+.school {
+    margin-left: -280px;
+    margin-top: 20px;
+    font-weight: bold;
+}
+
+.number {
+    margin-left: -300px;
+    margin-top: 10px;
+    font-weight: bold;
+}
+
+.e-mail {
+    margin-left: -300px;
+    margin-top: 10px;
+    font-weight: bold;
+}
+
+.support {
+    margin-left: -320px;
+    margin-top: 38px;
+    font-weight: bold;
+}
+
+.self {
+    margin-left: -320px;
+    margin-top: 90px;
+    font-weight: bold;
+}
+
+.strong {
+    margin-left: -325px;
+    margin-top: 90px;
+    font-weight: bold;
+}
+
+.finish {
+    font-weight: 100;
+    margin-top: 130px;
+    margin-left: 1310px;
+}
+
+.bo {
+    font-weight: 100;
+    margin-left: 970px;
+    margin-top: -35px;
 }
