--- a/Apply.css
+++ b/Apply.css
@@ -1,62 +1,131 @@
-#video-background {
-    position: fixed;
+* {
+    margin: 0;
+    padding: 0;
+    color: #FFF;
+}
+
+body {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+body video {
     top: 0;
-    right: 0;
-    bottom: 0;
     left: 0;
+    z-index: -1;
     width: 100%;
     height: 100%;
-    overflow: hidden;
-    z-index: -1;
-}
-#video-background video {
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-#content {
-    position: relative;
-    z-index: 1;
-    color: white;
-    text-align: center;
-    padding: 20px;
+    position: fixed;
+    object-fit: cover;
 }
 
-h3 {
+#section1 {
+    display: flex;
+    height: 100vh;
+    visibility: visible;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#content1-title {
+    font-size: 30px;
+    font-weight: 500;
+    line-height: 48px;
     text-align: center;
-    font-style: Zen Kaku Gothic New;
+    letter-spacing: 0em;
+}
+
+#content2-title {
+    opacity: 0.7;
     font-size: 20px;
-    margin-top: 180%;
-    font-weight: 53;
+    margin-top: 29px;
+    font-weight: 400;
+    line-height: 27px;
+    text-align: center;    
+    letter-spacing: 0em;
 }
 
-.centered-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-.centered-text1 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin-top: 22%;
+#section2 {
+    height: 100vh;
 }
 
-p{
-    margin: 3px;
-    font-size: 13px;
-    opacity: 0.5;
+#form-container {
+    row-gap: 40px;
+    display: flex;
+    margin-top: 137px;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.pig {
-    font-style: Noto Sans;
-    font-size: 13px;
-    text-align: center;
+.box-title {
+    opacity: 1;
+    font-size: 28px;
+    font-weight: 700;
+    margin-left: 20px;
+    line-height: 38px;
+    letter-spacing: 0em;
+}
+
+#email-box > div {
+    display: flex;
+}
+
+#sub-title {
+    font-size: 15px;
+    font-weight: 400;
+    margin-left: 8px;
+    line-height: 50px;
+    letter-spacing: 0em; 
+}
+
+.box-input {
+    width: 616px;
+    border: none;
+    height: 46px;
+    margin-top: 12px;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.45);
+}
+
+textarea {
+    opacity: 1;
+    resize: none;
+    border: none;
+    font-size: 22px;
+    max-width: 586px;
+    font-weight: 400;
+    line-height: 30px;
+    padding: 8px 21px;
+    letter-spacing: 0em;
+    width: calc(100% - 40px);
+    background-color: transparent;
+}
+
+textarea:focus {
+    outline: none;
+}
+
+#write-button {
+    width: 616px;
+    height: 62px;
+    opacity: 0.2;
+    border: none;
+    display: flex;
+    font-size: 24px;
+    font-weight: 700;
+    text-align: right;    
+    line-height: 33px;
+    border-radius: 5px;    
+    align-items: center;
+    letter-spacing: 0em;
+    justify-content: center;
+    background-color: rgba(255, 255, 255, 0.3);
+}
+
+#write-button:nth-child(2):disabled {
+    opacity: 0.3;
 }
