--- a/style.css
+++ b/style.css
@@ -96,7 +96,40 @@ body {
     text-align: center;
 }
 
+.num {
+    position: relative;
+  }
+  
+  .num1 {
+    opacity: 0; /* 초기에는 이미지를 숨김 */
+    transition: opacity 0.5s ease-in-out; /* 부드러운 페이드 효과를 위한 트랜지션 */
+  }
 
+  #num {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#num1 {
+    display: none;
+    animation: floatUp 0.5s ease-in-out forwards; /* floatUp 애니메이션을 적용합니다. */
+}
+
+@keyframes floatUp {
+    from {
+        opacity: 0;
+        transform: translateY(50px); /* 시작 시 아래에서 50px 위로 이동합니다. */
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0); /* 끝나는 지점에선 위로 이동하지 않습니다. */
+    }
+}
+
+  
 
 .container1, .container2, .container3, .container4 {
     position: relative;
