--- a/예제.css
+++ b/예제.css
@@ -28,31 +28,50 @@
   padding: 20px;
 }
 
-
-/* .member h {
-  color:white;
-  font-style: Zen Kaku Gothic New;
-  font-weight: 53;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
-  margin-left: 700px;
-  font-size: 18px;
+body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden; /* 스크롤 막기 */
 }
 
-h5 {
+#num {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative; /* 이미지의 상대적 위치를 조절하기 위해 */
+}
+
+.container1 {
+  position: absolute;
+  top: 0;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out; /* opacity 변화를 부드럽게 적용 */
+}
+
+
+.t20 {
+  color: rgba(57, 152, 255, 1);
+  font-style: Noto Sans;
+  font-weight: 53;
+  font-size: 17px;
+  margin-left: 28px;
+  margin-bottom: 100px;
+  top: 0; /* 스크롤할 때 상단에 고정됨 */
+  position: fixed;
+}
+
+.t21 {
   color:white;
   font-style: Noto Sans;
   font-weight: 53;
-  font-size: 13px;
-  text-align: left;
+  font-size: 17px;
+  margin-left: 80px;
+  margin-top: 28px;
+  top: 0; /* 스크롤할 때 상단에 고정됨 */
+  position: fixed;
 }
-
-#home {
-  position: fixed
-} */
 
 body {
   margin: 0;
@@ -67,11 +86,11 @@ body {
   position: fixed;
   top: 0; /* 스크롤할 때 상단에 고정됨 */
   width: 100%;
-  transition: top 0.3s; /* 스크롤에 반응하는 애니메이션 설정 */
+  transition: top 0.5s; /* 스크롤에 반응하는 애니메이션 설정 */
 }
 
 #total{
-  margin-top: 100px;
+  margin-top:50px;
 }
 
 .mem{
@@ -81,8 +100,6 @@ body {
   font-size: 20px;
   text-align: center;
 }
-
-
 
 .container1, .container2, .container3, .container4 {
   position: relative;
@@ -437,7 +454,7 @@ body {
   font-size: 13px;
   font-style: Noto Sans;
 }
-.s1 a, .s2 a, .s3 a, .s4 a, .s5 a, .s6 a, .s7 a, .s8 a, .s9 a, .s10 a {
+.s1 a, .s2 a, .s3 a, .s4 a, .s5 a, .s6 a, .s7 a, .s9 a, .s10 a {
   text-decoration: none;
   color: black;
 }
@@ -469,14 +486,6 @@ body {
   font-style: Noto Sans;
 }
 
-.s8{
-  text-align: left;
-  margin-left: 1020px;
-  margin-top: 250px;
-  position: absolute;
-  font-size: 13px;
-  font-style: Noto Sans;
-}
 
 .s9{
   text-align: left;
